<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/FormReg_Nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FormReg_Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/FormReg_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:ems="10"
        android:hint="@string/FormReg_Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/FormReg_Pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FormReg_RepPass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/FormReg_Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FormReg_Mail"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FormReg_TypeCard" />

    <RadioGroup
        android:id="@+id/FormReg_RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/FormReg_Debito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/FormReg_TypeCard_Opc"
            android:text="@string/FormReg_TypeCard_Opc_Deb" />

        <RadioButton
            android:id="@+id/FormReg_Credito"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="@dimen/FormReg_TypeCard_Opc"
            android:text="@string/FormReg_TypeCard_Opc_Cre" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/FormReg_NroCard"
            android:layout_width="@dimen/FormReg_CardNro"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FormReg_CardNro"
            android:inputType="number" />

        <EditText
            android:id="@+id/FormReg_CCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FormReg_CardCCV"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FormReg_DateCard" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/FormReg_Date_Month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FormReg_DateCard_Month"
            android:inputType="number"
            android:numeric="integer" />

        <EditText
            android:id="@+id/FormReg_Date_Year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/FormReg_DateCard_Year"
            android:inputType="number" />

    </LinearLayout>

    <EditText
        android:id="@+id/FormReg_CBU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FormReg_BankNro"
        android:inputType="number" />

    <EditText
        android:id="@+id/FormReg_Alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FormReg_BankAlias"
        android:inputType="textPersonName" />

    <Switch
        android:id="@+id/FormReg_Carga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/FormReg_InitCharge" />

    <TextView
        android:id="@+id/FormReg_TV_MontoCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FormReg_InitChargeMount"
        android:visibility="gone" />

    <SeekBar
        android:id="@+id/FormReg_MontoCarga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="1500"
        android:visibility="gone" />

    <CheckBox
        android:id="@+id/FormReg_TyC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FormReg_TyC" />

    <Button
        android:id="@+id/FormReg_BtnRegistrar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/FormReg_Btn" />

</LinearLayout>